Update on products page & overflow fix on sub side panes

--- a/apps/sacsin/assets/css/sacsin-admin-style.css
+++ b/apps/sacsin/assets/css/sacsin-admin-style.css
@@ -315,7 +315,9 @@ a.article:hover {
     position: fixed;
     top: 0; 
     right: 0;
+    overflow-x: clip;
     overflow-y: scroll;
+    overflow-wrap: break-word;
     transition-duration: 600ms;
     -webkit-transition-duration: 600ms;
 }
